tdf#105095 DOCX import: conditionally ignore leading tab in footnotes

Commit b38629ae210b204a6d24d6e9c5c62eaaf563d494 (cp#1000017 DOCX/RTF
import: avoid fake tab char in footnotes, 2013-12-05) added code to
strip leading tabs from footnote text to improve odt->docx->odt rountrip
experience.

Turns out that this is correct only in case the gap between the footnote
number and the content is provided by a paragraph margin. In case there
is no such margin, then the tab is wanted; so only conditionally ignore
such leading tab characters.

(cherry picked from commit abc440a691efb872afac385ce5ed28cd5db56c8c)

Change-Id: I9d419bf2fd3b4899208489210cbe9809a2ab0736